<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".SignupActivity" >

    <RelativeLayout
        android:id="@+id/signup_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/header_bg"
        android:gravity="center" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="12pt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="left"
            android:text="@string/signup"
            android:textColor="@color/primary"
            android:textSize="9pt" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/signup_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/signup_username"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/signup_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/signup_confirm_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/primary"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>